# Victor.os

./: .env.example  .flake8  .gitignore  .npmignore  .pre-commit-config.yaml  .prettierrc.json  CONTRIBUTING.md  DEDUP_AND_CLEANUP_PLAN.md  DEVELOPER_NOTES.md  LICENSE  MESSAGE_ROUTING_PROTOCOL.md  Makefile  PROJECT_TASKS.md  README-project-scanner.md  README.md  REORGANIZATION_SUMMARY.md  TASKS.md  TEST_STATUS.md  USER_ONBOARDING.md  __init__.py  _age  _internal_test_loop.py  apply_proposals.py  autofix_service.py  chat_mate_config.py  chatgpt_interface.py  chatgpt_project_context.json  check_import.py  chunk_tasks.py  cleanup_log.json  cli.py  config.json  config.yaml  conftest.py  cursor_interface.py  dashboard.py  dedup_by_directory.py  dedup_cleanup.py  dedup_exact_only.py  dedup_report_generator.py  (+68 more)
social/: .coverage  README.md  __init__.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  task_list.md
social/config/: settings.py
social/content/posts/: 2025-04-14-python-retry-mechanism.md
social/content/social/linkedin/: 2025-04-14-posts.json
social/content/social/twitter/: 2025-04-14-posts.json
social/core/: __init__.py  agent_bus.py  constants.py  mailbox.py  main.py  template_engine.py
social/core/agents/: agent_monitor_agent.py  cursor_control_agent.py  meredith_resonance_scanner.py  prompt_feedback_loop_agent.py  social_media_agent.py
social/core/coordination/: cursor_coordinator.py
social/core/coordination/cursor/: cursor_editor_controller.py  cursor_element_locator.py  cursor_instance_controller.py  cursor_terminal_controller.py  cursor_ui_trainer.py  cursor_window_controller.py  editor_service.py  locator_service.py  task_execution_monitor.py  task_execution_state_machine.py  terminal_service.py  window_service.py
social/core/exceptions/: __init__.py  strategy_exceptions.py
social/core/strategies/: __init__.py  base_strategy.py  facebook_strategy.py  linkedin_strategy.py  twitter_strategy.py
social/digital_dreamscape/: .history_cache.json  LICENSE  README.md  __init__.py  app.py  assistant_worker.py  chat_scraper.py  episode_generator.py  ignored_chats.txt  memory_manager.py  models.yaml  requirements.txt  utils.py  vector_db.py
social/digital_dreamscape/data/: memory_state.json
social/digital_dreamscape/dreamscape_generator/: __init__.py  config.py  main.py  requirements.txt
social/digital_dreamscape/dreamscape_generator/src/: __init__.py  chatgpt_locators.py  chatgpt_scraper.py  cli.py  context_manager.py  driver_manager_stub.py  experience_parser.py  external_stubs.py  generation_engine.py  history_manager.py  story_generator.py  unified_chrome_driver.py  utils.py
social/digital_dreamscape/dreamscape_generator/src/core/: DiscordManager.py  MemoryManager.py  UnifiedDriverManager.py  __init__.py  login_utils.py
social/digital_dreamscape/dreamscape_generator/templates/: dreamscape_prompt.j2  episode_prompt.j2
social/digital_dreamscape/dreamscape_generator/threads/: __init__.py  saga_worker.py
social/digital_dreamscape/dreamscape_gui/: dreamscape_tab.py  main_window.py  swarm_dashboard_tab.py  swarm_data_bridge.py
social/digital_dreamscape/memory/: engagement_memory.db  system_memory.json.zlib
social/digital_dreamscape/playwright_profile/: Local State
social/digital_dreamscape/playwright_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Visited Links  Web Data
social/digital_dreamscape/playwright_profile/Default/DawnGraphiteCache/: data_1  index
social/digital_dreamscape/playwright_profile/Default/DawnWebGPUCache/: data_1  index
social/digital_dreamscape/playwright_profile/Default/Extension Rules/: LOG
social/digital_dreamscape/playwright_profile/Default/Extension Scripts/: LOG
social/digital_dreamscape/playwright_profile/Default/Extension State/: LOG  LOG.old
social/digital_dreamscape/playwright_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  index
social/digital_dreamscape/playwright_profile/GraphiteDawnCache/: data_1  index
social/digital_dreamscape/playwright_profile/ShaderCache/: data_1  index
social/digital_dreamscape/playwright_profile/segmentation_platform/: ukm_db-wal
social/digital_dreamscape/scripts/: dreamscape_cli.py
social/digital_dreamscape/tests/: test_saga_generation_worker.py  test_saga_monitor_integration.py
social/docs/: demo_posts.md  demo_tweets.md
social/docs/examples/: prompt_payload_example.json
social/scripts/: debug_imports.py  engagement_dashboard.py  inject_task.py
social/templates/: blog_post.md.j2  twitter_post.j2
social/tests/: __init__.py  conftest.py  test_agent_load.py  test_devlog_analyzer.py  test_devlog_dispatcher.py  test_reddit_strategy.py  test_social_agent_e2e.py  test_social_media_agent.py  test_twitter_strategy.py
social/tests/core/: __init__.py  test_agent_monitor_agent.py  test_cursor_control_agent.py  test_meredith_resonance_scanner.py  test_prompt_feedback_loop_agent.py  test_prompt_staging_service.py  test_task_injector.py  test_template_engine.py
social/tests/core/memory/: test_governance_memory_engine.py
social/tests/integration/: test_core_task_execution.py  test_error_recovery.py  test_full_prompt_cycle.py  test_posting_workflow.py  test_social_agent_loop.py
social/tests/social/: test_facebook_strategy.py  test_linkedin_strategy.py  test_twitter_strategy.py
social/tests/social/snapshots/: linkedin_post.html  twitter_tweet.txt
social/tests/strategies/: __init__.py  base_strategy_test.py  base_test.py  test_facebook_strategy.py  test_twitter_strategy.py
social/tests/tools/: __init__.py  test_chat_cursor_bridge.py
social/tests/utils/: test_chatgpt_scraper.py  test_mailbox_handler.py  test_performance_logger.py  test_retry_utils.py  test_utils.py
social/utils/: __init__.py  chatgpt_scraper.py  common.py  cursor.py  devlog_analyzer.py  devlog_generator.py  logging_utils.py  selenium_utils.py
social/utils/content/: post_context_generator.py
(+6403 files in other folders)
